@@ -1,3 +1,5 @@
+  - 주문서가 미납인지 판별하는 `OpenCloset::Common::Unpaid::is_unpaid` 함수 추가 (#5)
+
 v0.1.6    Wed, 21 Mar 2018 23:45:26 +0900
   - 주문서에 '입고감'과 관련된 상수 추가
 
